--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.11",
     "@sveltejs/kit": "next",
     "svelte": "^3.34.0",
+    "svelte-preprocess": "^4.7.3",
     "vite": "^2.1.0"
   },
   "type": "module",
